--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "npm run clear && node app.js",
-    "clear": "rm -rf emails/*"
+    "clear": "rm -rf emails/*",
+    "test": "jest"
   },
   "keywords": [
     "email-generator",
@@ -16,5 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "inquirer": "^8.2.0"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
